# haversine

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Jenkinsfile-2  README.md  pyproject.toml  report.xml  setup.py  test-results.xml
geodist/: __init__.py  cli.py  haversine.py
haversine/: cli.py  haversine.py
tests/: __init__.py  haversine_test.py  test_haversine.py
